<resources>
    <string name="app_name">login_Project</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


    <string name="open">Open Menu</string>
    <string name="close">Close Menu</string>
    <string name="play_button_description">Play Button</string>
    <string name="forward_button">Forward button</string>
    <string name="rewind_button">Rewind button</string>
    <string name="song_cover_description">Song Cover Description</string>
    <string name="song_title">Song Title</string>
    <string name="song_artist">Song Artist</string>

</resources>