<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/defaultBackgroundColor">

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="Album Image"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Song Title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_below="@id/ImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/artistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Artist"
        android:textSize="18sp"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/white"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        android:layout_below="@id/artistTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/totalTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3:45"
        android:layout_below="@id/artistTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentTimeTextView"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"/>

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/buttonColor"
        android:elevation="4dp"
        android:src="@drawable/play2"
        android:contentDescription="@string/play_button_description" />

    <ImageButton
        android:id="@+id/forwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_forward"
        android:contentDescription="@string/forward_button"
        android:layout_margin="8dp" />

    <ImageButton
        android:id="@+id/rewindButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rewind"
        android:contentDescription="@string/rewind_button"
        android:layout_margin="8dp" />


</RelativeLayout>
